# OnlineRobotController

./: .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md
assets/ur5_shadow_example/urdf/: ur5.urdf  ur5_shadow.urdf
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: protocol.py
backend/app/plugins/: base.py  loader.py  manager.py
backend/app/plugins/mock/: __init__.py  config.toml  plugin.py
backend/app/plugins/ur5_shadow/: __init__.py  config.toml  plugin.py
backend/tests/: conftest.py  test_api.py  test_camera_perf.py  test_plugin.py  test_protocol.py  test_ur5_shadow_real_mode.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: profile.json
frontend/src/: main.tsx  styles.css
frontend/src/components/: ArmControlPanel.tsx  CameraPanel.tsx  EStopBar.tsx  JointPanel.tsx  PluginModePanel.tsx  Robot3DPanel.tsx
frontend/src/pages/: Dashboard.test.ts  Dashboard.tsx
frontend/src/services/: apiClient.ts  config.test.ts  config.ts  wsClient.ts
frontend/src/stores/: robotStore.ts
frontend/src/three/: robotScene.ts
frontend/src/types/: protocol.ts  urdf-loader.d.ts
